# CosmicSec

./: .coverage  .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENT_WORKFLOW_RULES.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_AUDIT.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  IMPROVEMENTS_SUMMARY.md  LICENSE  MANIFEST.in  Makefile  QUICK_START.md  README.md  ROADMAP.md  ROADMAP_CLI_AGENT.md  ROADMAP_NEXT.md  SECURITY.md  SESSION_COMPLETION_REPORT.md  alembic.ini  config.py  cosmicsec.db  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  execution.json  gap_analysis.md  main.py  model.json  pyproject.toml  report.md  request.json  requirements-local-llm.txt  requirements.txt  setup.py  (+4 more)
.artifacts/: docs-scan-developer.json  docs-scan-production.json  docs-scan-user.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  SECRETS_REQUIRED.md  dependabot.yml  perf-baseline.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/recommit/: last-run.env
.github/workflows/: _reusable-docs-suite.yml  auto-refactor-recommit.yml  build.yml  codeql.yml  commit-message-lint.yml  coverage-report.yml  dependency-update-guard.yml  deploy.yml  docs-developer-development.yml  docs-production-status-progress.yml  docs-user-detailed.yml  experience-gates.yml  homebrew-tap-sync.yml  license-compliance.yml  main-security-autofix.yml  project-health-report.yml  publish-agent-npm.yml  publish-agent.yml  quality-gate.yml  release-automation.yml  scheduled-maintenance.yml  security-scan.yml  sql-injection-ci.yml  staging-preview.yml  storybook.yml  test.yml  wiki-sync-update.yml  workflow-quality.yml
Archives/Codes/: api_gateway_phase5_20260315_103256.py  docker_compose_phase5_20260315_103256.yml  frontend_main_20260315_103256.tsx
Archives/Docs/: IMPLEMENTATION_GUIDE_preupdate_20260315_102317.md  MODERNIZATION_ROADMAP_20260315_102228.md  MODERNIZATION_ROADMAP_phase5_20260315_103256.md
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_placeholder.py  0002_initial_schema.py  0003_add_users_2fa_columns.py  0003_phase_l_persistence.py  0004_phase_r_multi_tenancy.py  (+5 more)
broker/: Dockerfile  go.mod  go.sum  main.go
cli/: README.md
cli/agent/: README.md  pyproject.toml
cli/agent/cosmicsec_agent/: __init__.py  ai_planner.py  audit_log.py  auth.py  branding.py  config.py  credential_store.py  dynamic_resolver.py  executor.py  hybrid_engine.py  intent_parser.py  main.py  offline_store.py  output.py  plugins.py  profiles.py  progress.py  rust_accel.py  stream.py  tool_registry.py
cli/agent/cosmicsec_agent/parsers/: __init__.py  burpsuite_parser.py  ffuf_parser.py  gobuster_parser.py  hashcat_parser.py  hydra_parser.py  john_parser.py  masscan_parser.py  metasploit_parser.py  nikto_parser.py  nmap_parser.py  nuclei_parser.py  sqlmap_parser.py  wpscan_parser.py  zaproxy_parser.py
cli/agent/npm/: package.json
cli/agent/npm/lib/: installer.js
cli/agent/rust_parsers/: Cargo.toml
cli/agent/rust_parsers/src/: lib.rs
cli/agent/tests/: __init__.py  test_branding.py  test_cli_phase_ca2.py  test_cli_phase_ca8_ca9_ca10.py  test_cli_security_phase_ca1.py  test_hybrid_engine.py  test_tool_registry_wsl.py
cosmicsec.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cosmicsec_platform/: __init__.py  config.py  service_discovery.py
docs/: ARCHITECTURE_DIAGRAM.md  BRANDING_GUIDE.md  BUG_BOUNTY_GUIDE.md  CROSS_PLATFORM_GUIDE.md  DEPLOYMENT_GUIDE.md  DEVSECOPS_GUIDE.md  DIRECTORY_STRUCTURE.md  DOCKER_TROUBLESHOOTING.md  ENHANCEMENT_SUMMARY.md  FEATURES_SPEC.md  HOSTING_REQUIREMENTS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MODERNIZATION_ROADMAP.md  PHASE_I_DETAILS.md  PHASE_PROGRESS.md  PROJECT_GOAL_AND_PROGRESS.md  PROJECT_INDEX.md  QUICK_START.md  README.md  ROADMAP_CHANNEL_EXPANSION.md  ROADMAP_UNIFIED.md  SERVICE_DISCOVERY_FIX.md  SOC_ANALYST_GUIDE.md  SUMMARY.md  TESTING_GUIDE.md  architecture.md  flowchart.md  main_features.md  project_algorithm.md  project_diagram.md  structure.md
frontend/: eslint.config.js  eslint.security.config.js  index.html  jest.config.cjs  nohup.out  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
infrastructure/: init-db.sql  prometheus.yml  prometheus_alerts.yml  redis.conf  traefik-dynamic.yml  traefik.yml
ingest/: Cargo.toml  Dockerfile
ingest/proto/: ingest.proto
ingest/src/: config.rs  db.rs  error.rs  main.rs  metrics.rs  normalizer.rs  schema.rs  stream.rs
ingest/src/parsers/: generic.rs  mod.rs  nikto.rs  nmap.rs  nuclei.rs  zap.rs
ingest/tests/: integration.rs
ingest/tests/fixtures/: sample_nmap.xml  sample_nuclei.jsonl
llm/: model_loader.py
mobile/: App.tsx  README.md  app.json  package.json
plugins/: db_repository.py  permissions.py  registry.py  signing.py
recon/: github_leak_detector.py  info_gathering.py  osint_tools.py  tor_leak_checker.py
requirements/: dev.txt  runtime.txt
reverse_engineering/: binary_patcher.py
scanners/: ai_scanner_bridge.py  cve_scanner.py  vulnerability_scanner.py
scripts/: compose-dev.ps1  docker-build-safe.ps1  generate-cli-manpage.py  health-check.sh  init-admin.py  load_kb.py  migrate.py  seed-dev-data.py  setup-self-hosted.py
sdk/go/: go.mod  (+2 more)
tests/: conftest.py  test_admin_service.py  test_ai_agents.py  test_ai_service.py  test_api_gateway.py  test_auth_service.py  test_bugbounty_service.py  test_collab_service.py  test_compliance_service.py  test_defensive_ai.py  test_docker_env.py  test_egress_service.py  test_events_module.py  test_ingest_bridge.py  test_integration_service.py  test_notification_service.py  test_org_service.py  test_phase2_plugins_mitre.py  test_phase4_advanced_ai.py  test_phase5_service.py  test_phase_r4_rbac.py  test_phase_r5_white_label.py  test_plugin_registry_official.py  test_recon_service.py  test_report_service.py  test_scan_service.py
tools/: nikto_scanner.py  payload_generator.py  sqlmap_runner.py
utils/: logger.py
(+289 files in other folders)
