[tool.poetry]
name = "cosmicsec"
version = "1.0.0"
description = "CosmicSec - Universal Cybersecurity Intelligence Platform"
authors = ["Mufthakherul Islam Miraz <mufthakherul_cybersec@s6742.me>"]
readme = "README.md"
packages = [{ include = "services" }, { include = "cosmicsec_platform" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
python-dotenv = ">=1.2.2"
pyyaml = ">=6.0.3"
requests = ">=2.33.1"
httpx = ">=0.28.1"
aiohttp = ">=3.13.5"
rich = ">=15.0.0"
textual = ">=8.2.3"
typer = ">=0.24.1"
openai = ">=2.31.0"
cryptography = ">=46.0.7"
passlib = {version = ">=1.7.4", extras = ["bcrypt"]}
fastapi = ">=0.135.3"
uvicorn = {version = ">=0.44.0", extras = ["standard"]}
asyncssh = ">=2.22.0"
python-multipart = ">=0.0.26"
slowapi = ">=0.1.9"
python-jose = {version = ">=3.5.0", extras = ["cryptography"]}
pydantic = {version = ">=2.13.0", extras = ["email"]}
psycopg2-binary = ">=2.9.11"
pymongo = ">=4.16.0"
redis = ">=7.4.0"
sqlalchemy = ">=2.0.49"
alembic = ">=1.18.4"
celery = ">=5.6.3"
kombu = ">=5.6.2"
prometheus-client = ">=0.25.0"
ariadne = ">=1.0.1"
sentry-sdk = ">=2.58.0"
opentelemetry-api = ">=1.41.0"
opentelemetry-sdk = ">=1.41.0"
opentelemetry-exporter-otlp-proto-grpc = ">=1.41.0"
opentelemetry-exporter-otlp-proto-http = ">=1.41.0"
opentelemetry-instrumentation-fastapi = ">=0.52b0"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3"
pytest-cov = ">=7.1.0"
ruff = ">=0.15.10"
mypy = ">=1.20.1"

[tool.black]
line-length = 100
target-version = ["py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "Archives/",
    ".git",
    "__pycache__",
    "*.pyc",
    ".venv",
    "venv",
    "node_modules",
    "dist",
    "build",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B006",   # mutable default argument
    "B008",   # do not perform function calls in default arguments
    "B027",   # abstract method without abstractmethod decorator (style choice)
    "B904",   # raise from within except clause (pervasive style in codebase)
    "SIM102", # nested if statements (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["services", "cosmicsec_platform"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
