[package]
name = "cosmicsec-ingest"
version = "0.1.0"
edition = "2021"
description = "CosmicSec high-performance security-finding ingest engine"
authors = ["CosmicSec Team"]
license = "MIT"

[[bin]]
name = "cosmicsec-ingest"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP / gRPC
axum = { version = "0.7", features = ["macros"] }
tonic = { version = "0.11" }
prost = { version = "0.12" }
tower = { version = "0.4" }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# XML parsing (streaming — SAX-style, no full DOM)
quick-xml = { version = "0.36", features = ["serialize"] }

# CSV parsing
csv = { version = "1.3" }

# Database
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Redis streams
redis = { version = "0.25", features = ["tokio-comp", "streams"] }

# Prometheus metrics
prometheus-client = { version = "0.22" }

# Tracing / observability
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
opentelemetry = { version = "0.22" }
opentelemetry-otlp = { version = "0.15", features = ["tonic"] }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = { version = "1" }
thiserror = { version = "1" }
dotenvy = { version = "0.15" }
config = { version = "0.14" }

[build-dependencies]
tonic-build = { version = "0.11" }

[dev-dependencies]
tokio-test = "0.4"
assert_matches = "1.5"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
