[project]
name = "cosmicsec-agent"
version = "0.1.0"
description = "CosmicSec local agent — discovers and runs security tools locally, streams results to cloud"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["cybersecurity", "agent", "nmap", "scanner"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "websockets>=12",
  "httpx>=0.27",
  "pydantic>=2.5",
  "aiofiles>=23.0",
]

[project.scripts]
cosmicsec-agent = "cosmicsec_agent.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
