[project]
name = "cosmicsec-agent"
version = "0.3.0"
description = "CosmicSec AI-powered security agent — hybrid dynamic/static tool execution, AI planning, and cloud streaming"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["cybersecurity", "agent", "nmap", "scanner", "ai", "hybrid", "security"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Topic :: Security",
  "Typing :: Typed",
]
dependencies = [
  "typer>=0.12",
  "rich>=13",
  "websockets>=12",
  "httpx>=0.27",
  "pydantic>=2.5",
  "aiofiles>=23.0",
  "keyring>=25.0",
  "cryptography>=42.0",
]

[project.optional-dependencies]
ai = [
  "openai>=2.31.0",
]
all = [
  "openai>=2.31.0",
  "pyyaml>=6.0",
]

[project.scripts]
cosmicsec-agent = "cosmicsec_agent.main:app"
cosmicsec = "cosmicsec_agent.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
